@@ -18,7 +18,9 @@ Dark Data Rule Service
 
 This project using Spring Boot so it will build an executable JAR file that when run with the ``java -jar`` command will start an embedded tomcat instance on port 8095.
 
-``java -jar darkdata-rule-service-0.0.1-SNAPSHOT.jar``
+``java -jar -Xmx2048m -XX:MaxPermSize=512m darkdata-rule-service.jar >> rules.log &``
+
+Alternatively you can use the provided ``run.sh`` script to start the service.
 
 ## Service Test
 
